--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,19 @@
 <h1>About</h1>
-<h1>討論</h1>
+<p>組員:</p>
+<p>40823214 40823225 40823247 40823248</p>
+<p>分工:</p>
+<p>40823214 繪圖</p>
+<p>40823225 網頁管理</p>
+<p>40823247 <span>40823248 程式模擬</span></p>
+<p>組員網站及倉儲</p>
+<p><span>40823214倉儲:<a href="https://github.com/40823214/cd2021">https://github.com/40823214/cd2021</a></span></p>
+<p>               <span>網頁:<a href="https://40823214.github.io/cd2021/content/index.html">https://40823214.github.io/cd2021/content/index.html</a></span></p>
+<p><span>40823225倉儲:<a href="https://github.com/40823225/cd2021">https://github.com/40823225/cd2021</a></span></p>
+<p><span>              網頁:<a href="https://40823225.github.io/cd2021/content/index.html">https://40823225.github.io/cd2021/content/index.html</a></span></p>
+<p><span>40823247倉儲:<a href="https://github.com/40823247/cd2021">https://github.com/40823247/cd2021</a></span></p>
+<p>              <span>網頁:<a href="https://40823247.github.io/cd2021/content/index.html">https://40823247.github.io/cd2021/content/index.html</a></span></p>
+<p><span>40823248倉儲:<a href="https://github.com/40823248/cd2021">https://github.com/40823248/cd2021</a></span></p>
+<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p><h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
 <p><img alt="" height="810" src="/images/4人分組討論1.png" width="592"/><img alt="" height="854" src="/images/4人分組討論2.png" width="748"/><img alt="" height="1032" src="/images/4人分組討論3.5.png" width="1194"/><img alt="" height="800" src="/images/4人分組討論4.png" width="400"/></p>
