--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,5 +5,5 @@
 <p><img alt="" height="810" src="/images/4人分組討論1.png" width="592"/><img alt="" height="854" src="/images/4人分組討論2.png" width="748"/><img alt="" height="1032" src="/images/4人分組討論3.5.png" width="1194"/><img alt="" height="800" src="/images/4人分組討論4.png" width="400"/></p>
 <h2>第二次討論</h2>
 <p>日期4/6</p>
-<p></p>
+<p><img alt="" height="1100" src="/images/第二次4人分組討論.jpg" width="443"/></p>
 <p></p>
