--- a/content/討論.html
+++ b/content/討論.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,22 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='討論.html'>Next</a> >> 討論<br /><h1>About</h1>
-<p>組員:</p>
-<p>40823214 40823225 40823247 40823248</p>
-<p>分工:</p>
-<p>40823214 繪圖</p>
-<p>40823225 網頁管理</p>
-<p>40823247 <span>40823248 程式模擬</span></p>
-<p>組員網站及倉儲</p>
-<p><span>40823214倉儲:<a href="https://github.com/40823214/cd2021">https://github.com/40823214/cd2021</a></span></p>
-<p>               <span>網頁:<a href="https://40823214.github.io/cd2021/content/index.html">https://40823214.github.io/cd2021/content/index.html</a></span></p>
-<p><span>40823225倉儲:<a href="https://github.com/40823225/cd2021">https://github.com/40823225/cd2021</a></span></p>
-<p><span>              網頁:<a href="https://40823225.github.io/cd2021/content/index.html">https://40823225.github.io/cd2021/content/index.html</a></span></p>
-<p><span>40823247倉儲:<a href="https://github.com/40823247/cd2021">https://github.com/40823247/cd2021</a></span></p>
-<p>              <span>網頁:<a href="https://40823247.github.io/cd2021/content/index.html">https://40823247.github.io/cd2021/content/index.html</a></span></p>
-<p><span>40823248倉儲:<a href="https://github.com/40823248/cd2021">https://github.com/40823248/cd2021</a></span></p>
-<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p><br /> <a href='討論.html'>Next</a> >> 討論</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='第一次討論.html'>Next</a> >> 第一次討論<br /><h1>討論</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='第一次討論.html'>Next</a> >> 第一次討論</div>
         
     <!-- footer -->
       <div class="container">
