多功能腳踏車衝擊測試機

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,29 @@
 <h1>About</h1>
+<p>組員:</p>
+<p>40823214 40823225 40823247 40823248</p>
+<p>分工:</p>
+<p>40823214 繪圖</p>
+<p>40823225 網頁管理</p>
+<p>40823247 <span>40823248 程式模擬</span></p>
+<p>組員網站及倉儲</p>
+<p><span>40823214倉儲:<a href="https://github.com/40823214/cd2021">https://github.com/40823214/cd2021</a></span></p>
+<p>               <span>網頁:<a href="https://40823214.github.io/cd2021/content/index.html">https://40823214.github.io/cd2021/content/index.html</a></span></p>
+<p><span>40823225倉儲:<a href="https://github.com/40823225/cd2021">https://github.com/40823225/cd2021</a></span></p>
+<p><span>              網頁:<a href="https://40823225.github.io/cd2021/content/index.html">https://40823225.github.io/cd2021/content/index.html</a></span></p>
+<p><span>40823247倉儲:<a href="https://github.com/40823247/cd2021">https://github.com/40823247/cd2021</a></span></p>
+<p>              <span>網頁:<a href="https://40823247.github.io/cd2021/content/index.html">https://40823247.github.io/cd2021/content/index.html</a></span></p>
+<p><span>40823248倉儲:<a href="https://github.com/40823248/cd2021">https://github.com/40823248/cd2021</a></span></p>
+<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p>
+<h1>多功能腳踏車衝擊測試機</h1>
+<h2>1.腳踏車架衝擊測試</h2>
+<p>參考規範</p>
+<p>ISO 4210</p>
+<p>第六章</p>
+<p>4.1車架-衝擊測試(落槌衝擊)</p>
+<p>4.1.2 測試方法</p>
+<p>4.1.2.1 </p>
+<p>在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落</p>
+<p><span> <img alt="" height="1225" src="/images/車架2.jpg" width="964"/></span></p>
 <h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
