--- a/config/content.htm
+++ b/config/content.htm
@@ -13,7 +13,44 @@
 <p><span>40823247倉儲:<a href="https://github.com/40823247/cd2021">https://github.com/40823247/cd2021</a></span></p>
 <p>              <span>網頁:<a href="https://40823247.github.io/cd2021/content/index.html">https://40823247.github.io/cd2021/content/index.html</a></span></p>
 <p><span>40823248倉儲:<a href="https://github.com/40823248/cd2021">https://github.com/40823248/cd2021</a></span></p>
-<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p><h1>討論</h1>
+<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p>
+<h1>多功能腳踏車衝擊測試機</h1>
+<h2>1.腳踏車架衝擊測試</h2>
+<p>參考規範</p>
+<p>ISO 4210</p>
+<p>第六章</p>
+<p>4.1車架-衝擊測試(落槌衝擊)</p>
+<p>4.1.2 測試方法</p>
+<p>4.1.2.1 </p>
+<p>在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落</p>
+<p><span> <img alt="" height="1225" src="/images/車架2.jpg" width="964"/></span></p>
+<img alt="" height="598" src="/images/車架3.jpg" width="816"/>
+<h2>2.前叉衝擊測試</h2>
+<p>參考規範</p>
+<p>ISO 4210</p>
+<p>第六章</p>
+<p>5.4 前叉-後巷衝擊測試</p>
+<p>5.4.1.1 </p>
+<p><span>在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，將落錘升起治距離"h"，釋放落錘使其錘職下落</span></p>
+<p><span><img alt="" height="1148" src="/images/前叉.jpg" width="976"/></span></p>
+<h2>3.踏板衝擊測試</h2>
+<p>參考規範</p>
+<p>ISO 4210</p>
+<p>第八章</p>
+<p>4.2 踏板－衝擊測試</p>
+<p>將腳踏板穩固鎖緊於堅硬平面治具上，與軸心呈水平，如圖 3 所示，製作圖 2 示意的落錘，重 15 公斤，從高 400 mm 處以衝擊腳踏板中心。 備註見 TBIS 4210‐3:2016 附錄 B。</p>
+<p><img alt="" height="766" src="/images/踏板.jpg" width="475"/></p>
+<h2>4.登山車輪組能量吸收測試</h2>
+<p>參考規範</p>
+<p>ISO 4210</p>
+<p>第七章 附錄C</p>
+<p>C1.1要求:</p>
+<p>依照測試方法完成測試後，不得出現胎壓喪失或出現斷裂或目視可見之裂痕</p>
+<p>C1.2 測試方法</p>
+<p>依輪軸之緊固裝置支撐倫組，兵將受衝擊處語氣嘴呈90度相對位置後，以40J進行衝擊，衝擊之錐鉆須為鐵機金屬，總質量為22.5KG，落下期間允許被引導，重吉時須達到自由落體95%含以上的落下速度</p>
+<p><span>錐鉆幾何規格如下，其長度需大於輪胎寬度</span></p>
+<p><span><img alt="" height="380" src="/images/輪胎.jpg" width="488"/></span></p>
+<h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
 <p><img alt="" height="810" src="/images/4人分組討論1.png" width="592"/><img alt="" height="854" src="/images/4人分組討論2.png" width="748"/><img alt="" height="1032" src="/images/4人分組討論3.5.png" width="1194"/><img alt="" height="800" src="/images/4人分組討論4.png" width="400"/></p>
