--- a/config/content.htm
+++ b/config/content.htm
@@ -24,7 +24,7 @@
 <p>4.1.2.1 </p>
 <p>在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落</p>
 <p><span> <img alt="" height="1225" src="/images/車架2.jpg" width="964"/></span></p>
-<img alt="" height="598" src="/images/車架3.jpg" width="816"/>
+<p><img alt="" height="598" src="/images/車架3.jpg" width="816"/></p>
 <h2>2.前叉衝擊測試</h2>
 <p>參考規範</p>
 <p>ISO 4210</p>
@@ -50,6 +50,11 @@
 <p>依輪軸之緊固裝置支撐倫組，兵將受衝擊處語氣嘴呈90度相對位置後，以40J進行衝擊，衝擊之錐鉆須為鐵機金屬，總質量為22.5KG，落下期間允許被引導，重吉時須達到自由落體95%含以上的落下速度</p>
 <p><span>錐鉆幾何規格如下，其長度需大於輪胎寬度</span></p>
 <p><span><img alt="" height="380" src="/images/輪胎.jpg" width="488"/></span></p>
+<h1>0319 繪圖</h1>
+<p><span>車架落槌治具</span></p>
+<p><span><img alt="" height="966" src="/images/自行車落槌治具.jpg" width="536"/></span></p>
+<p><span>前叉落槌治具</span></p>
+<p><span><img alt="" height="745" src="/images/前叉落槌治具.jpg" width="1089"/></span></p>
 <h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
