--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -55,7 +55,12 @@
 <p><span><img alt="" height="966" src="/images/自行車落槌治具.jpg" width="536"/></span></p>
 <p><span>前叉落槌治具</span></p>
 <p><span><img alt="" height="745" src="/images/前叉落槌治具.jpg" width="1089"/></span></p>
-<h1>討論</h1>
+<h1>成品</h1>
+<p></p>
+<p><span>車架衝擊</span></p>
+<p><span><img alt="" height="847" src="/images/車架衝擊.jpg" width="966"/></span></p>
+<p><span>前叉衝擊</span></p>
+<p><span><img alt="" height="1153" src="/images/前叉衝擊.jpg" width="993"/></span></p><h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
 <p><img alt="" height="810" src="/images/4人分組討論1.png" width="592"/><img alt="" height="854" src="/images/4人分組討論2.png" width="748"/><img alt="" height="1032" src="/images/4人分組討論3.5.png" width="1194"/><img alt="" height="800" src="/images/4人分組討論4.png" width="400"/></p>
