--- a/content/0319 繪圖.html
+++ b/content/0319 繪圖.html
@@ -134,23 +134,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機<br /><h1>About</h1>
-<p>組員:</p>
-<p>40823214 40823225 40823247 40823248</p>
-<p>分工:</p>
-<p>40823214 繪圖</p>
-<p>40823225 網頁管理</p>
-<p>40823247 <span>40823248 程式模擬</span></p>
-<p>組員網站及倉儲</p>
-<p><span>40823214倉儲:<a href="https://github.com/40823214/cd2021">https://github.com/40823214/cd2021</a></span></p>
-<p>               <span>網頁:<a href="https://40823214.github.io/cd2021/content/index.html">https://40823214.github.io/cd2021/content/index.html</a></span></p>
-<p><span>40823225倉儲:<a href="https://github.com/40823225/cd2021">https://github.com/40823225/cd2021</a></span></p>
-<p><span>              網頁:<a href="https://40823225.github.io/cd2021/content/index.html">https://40823225.github.io/cd2021/content/index.html</a></span></p>
-<p><span>40823247倉儲:<a href="https://github.com/40823247/cd2021">https://github.com/40823247/cd2021</a></span></p>
-<p>              <span>網頁:<a href="https://40823247.github.io/cd2021/content/index.html">https://40823247.github.io/cd2021/content/index.html</a></span></p>
-<p><span>40823248倉儲:<a href="https://github.com/40823248/cd2021">https://github.com/40823248/cd2021</a></span></p>
-<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p>
-<br /> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機</div>
+    <div id="tipue_search_content">4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='成品.html'>Next</a> >> 成品<br /><h1>0319 繪圖</h1>
+<p><span>車架落槌治具</span></p>
+<p><span><img alt="" height="966" src="./../images/自行車落槌治具.jpg" width="536"/></span></p>
+<p><span>前叉落槌治具</span></p>
+<p><span><img alt="" height="745" src="./../images/前叉落槌治具.jpg" width="1089"/></span></p>
+<br />4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='成品.html'>Next</a> >> 成品</div>
         
     <!-- footer -->
       <div class="container">
