--- a/content/討論.html
+++ b/content/討論.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li><a href='0319 繪圖.html'>0319 繪圖</a><li><a href='成品.html'>成品</a><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='第一次討論.html'>Next</a> >> 第一次討論<br /><h1>討論</h1>
-<br />4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='第一次討論.html'>Next</a> >> 第一次討論</div>
+    <div id="tipue_search_content">成品 << <a href='成品.html'>Previous</a> <a href='第一次討論.html'>Next</a> >> 第一次討論<br /><h1>討論</h1>
+<br />成品 << <a href='成品.html'>Previous</a> <a href='第一次討論.html'>Next</a> >> 第一次討論</div>
         
     <!-- footer -->
       <div class="container">
