--- a/config/content.htm
+++ b/config/content.htm
@@ -60,7 +60,13 @@
 <p><span></span></p>
 <p><span><img alt="" height="862" src="/images/車架衝擊.jpg" width="983"/></span></p>
 <p><span>前叉衝擊</span></p>
-<p><span><img alt="" height="1153" src="/images/前叉衝擊.jpg" width="993"/></span></p><h1>討論</h1>
+<p><span><img alt="" height="1153" src="/images/前叉衝擊.jpg" width="993"/></span></p>
+<h1>影片</h1>
+<h2>第六周</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oc-Pmd3xb3Q" width="560"></iframe><a href="https://youtu.be/Oc-Pmd3xb3Q">https://youtu.be/Oc-Pmd3xb3Q</a></p>
+<h2>第七周</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ysv6bemaso4" width="560"></iframe><a href="https://youtu.be/ysv6bemaso4">https://youtu.be/ysv6bemaso4</a></p>
+<h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
 <p><img alt="" height="810" src="/images/4人分組討論1.png" width="592"/><img alt="" height="854" src="/images/4人分組討論2.png" width="748"/><img alt="" height="1032" src="/images/4人分組討論3.5.png" width="1194"/><img alt="" height="800" src="/images/4人分組討論4.png" width="400"/></p>
