--- a/config/content.htm
+++ b/config/content.htm
@@ -61,7 +61,34 @@
 <p><span><img alt="" height="862" src="/images/車架衝擊.jpg" width="983"/></span></p>
 <p><span>前叉衝擊</span></p>
 <p><span><img alt="" height="1153" src="/images/前叉衝擊.jpg" width="993"/></span></p>
-<h1>影片</h1>
+<h1>市購件廠商(參考廠商)</h1>
+<p>精密軸心</p>
+<p><a href="http://www.sunhoist.com.tw/precision-slide-shaft.html">崧和實業-精密軸心</a></p>
+<p>直線軸承</p>
+<p><a href="http://www.sunhoist.com.tw/lm-linear-bearing.html">松和實業-直線軸承</a></p>
+<p>滾珠導螺桿</p>
+<p><a href="https://www.hiwin.tw/products/ballscrew/super_s.aspx">上銀-SUPER S滾珠螺桿</a></p>
+<p>減速機</p>
+<p><a href="https://www.dah-shin.com.tw/product-detail-1136028.html">鉫鈦有限公司-NMRV040</a></p>
+<p>馬達</p>
+<p><a href="https://www.deltaww.com/zh-TW/products/Servo-Systems-AC-Servo-Motors-and-Drives/14">台達-400W伺服馬達</a></p>
+<p>光學尺</p>
+<p><a href="https://www.rls.si/cn/fileuploader/download/download/?d=1&amp;file=custom%2Fupload%2FHLD01_02_EN_datasheet.pdf">RLS-光學尺</a></p>
+<p>皮帶</p>
+<p><a href="http://www.twbelt.com.tw/webc/html/products/show.aspx?id=23&amp;kid=24">台灣時規皮帶-5M</a></p>
+<p>鋁擠型及其配件</p>
+<p><a href="http://www.yowmeng.com.tw/exec/product.php?mod=list&amp;cid=7&amp;lg=T">又盟直動</a></p>
+<p>精密螺帽</p>
+<p><a href="https://www.skf.com/tw">SKF-軸向精密螺帽</a></p>
+<p>五金配件</p>
+<p><a href="https://www.tohatsu.com.tw/">伍全企業社</a></p>
+<p>光電開關</p>
+<p><a href="https://luminaire-eg.com/products/omch/color-sensor/e3s-gs7/">遮斷式光電開關</a></p>
+<p>近接開關</p>
+<p><a href="https://www.omron.com.tw/products/category/sensors/proximity-sensors/cylindrical/index.html">圓柱形近接開關</a></p>
+<p>極限開關</p>
+<p><a href="https://www.mouser.tw/ProductDetail/Industruino/TZ-8108?qs=HXFqYaX1Q2yzh1YHhxYj%2FQ==&amp;gclid=CjwKCAjwjbCDBhAwEiwAiudBy6vJh2NceWZQ4OXGQJzwOHE0uSEJ3gjhb0_W9bQKT_LS41OlfgTwmhoCwPkQAvD_BwE">極限安全限動開關</a></p>
+<p></p><h1>影片</h1>
 <h2>第六周</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oc-Pmd3xb3Q" width="560"></iframe><a href="https://youtu.be/Oc-Pmd3xb3Q">https://youtu.be/Oc-Pmd3xb3Q</a></p>
 <h2>第七周</h2>
