--- a/content/4.登山車輪組能量吸收測試.html
+++ b/content/4.登山車輪組能量吸收測試.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li><a href='0319 繪圖.html'>0319 繪圖</a><li><a href='成品.html'>成品</a><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">3.踏板衝擊測試 << <a href='3.踏板衝擊測試.html'>Previous</a> <a href='0319 繪圖.html'>Next</a> >> 0319 繪圖<br /><h1>4.登山車輪組能量吸收測試</h1>
+    <div id="tipue_search_content">3.踏板衝擊測試 << <a href='3.踏板衝擊測試.html'>Previous</a> <a href='成品.html'>Next</a> >> 成品<br /><h1>4.登山車輪組能量吸收測試</h1>
 <p>參考規範</p>
 <p>ISO 4210</p>
 <p>第七章 附錄C</p>
@@ -144,7 +144,7 @@ img.add_border {
 <p>依輪軸之緊固裝置支撐倫組，兵將受衝擊處語氣嘴呈90度相對位置後，以40J進行衝擊，衝擊之錐鉆須為鐵機金屬，總質量為22.5KG，落下期間允許被引導，重吉時須達到自由落體95%含以上的落下速度</p>
 <p><span>錐鉆幾何規格如下，其長度需大於輪胎寬度</span></p>
 <p><span><img alt="" height="380" src="./../images/輪胎.jpg" width="488"/></span></p>
-<br />3.踏板衝擊測試 << <a href='3.踏板衝擊測試.html'>Previous</a> <a href='0319 繪圖.html'>Next</a> >> 0319 繪圖</div>
+<br />3.踏板衝擊測試 << <a href='3.踏板衝擊測試.html'>Previous</a> <a href='成品.html'>Next</a> >> 成品</div>
         
     <!-- footer -->
       <div class="container">
