--- a/content/市購件廠商(參考廠商).html
+++ b/content/市購件廠商(參考廠商).html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li><a href='0319 繪圖.html'>0319 繪圖</a><li><a href='成品.html'>成品</a><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">成品 << <a href='成品.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>市購件廠商(參考廠商)</h1>
+    <div id="tipue_search_content">治具 << <a href='治具.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>市購件廠商(參考廠商)</h1>
 <p>精密軸心</p>
 <p><a href="http://www.sunhoist.com.tw/precision-slide-shaft.html">崧和實業-精密軸心</a></p>
 <p>直線軸承</p>
@@ -161,7 +161,8 @@ img.add_border {
 <p><a href="https://www.omron.com.tw/products/category/sensors/proximity-sensors/cylindrical/index.html">圓柱形近接開關</a></p>
 <p>極限開關</p>
 <p><a href="https://www.mouser.tw/ProductDetail/Industruino/TZ-8108?qs=HXFqYaX1Q2yzh1YHhxYj%2FQ==&amp;gclid=CjwKCAjwjbCDBhAwEiwAiudBy6vJh2NceWZQ4OXGQJzwOHE0uSEJ3gjhb0_W9bQKT_LS41OlfgTwmhoCwPkQAvD_BwE">極限安全限動開關</a></p>
-<p></p><br />成品 << <a href='成品.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
+<p></p>
+<br />治具 << <a href='治具.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
         
     <!-- footer -->
       <div class="container">
