--- a/content/成品.html
+++ b/content/成品.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li><a href='0319 繪圖.html'>0319 繪圖</a><li><a href='成品.html'>成品</a><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,13 +134,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">0319 繪圖 << <a href='0319 繪圖.html'>Previous</a> <a href='市購件廠商(參考廠商).html'>Next</a> >> 市購件廠商(參考廠商)<br /><h1>成品</h1>
+    <div id="tipue_search_content">4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='治具.html'>Next</a> >> 治具<br /><h1>成品</h1>
 <p>車架衝擊</p>
 <p><span></span></p>
 <p><span><img alt="" height="862" src="./../images/車架衝擊.jpg" width="983"/></span></p>
 <p><span>前叉衝擊</span></p>
 <p><span><img alt="" height="1153" src="./../images/前叉衝擊.jpg" width="993"/></span></p>
-<br />0319 繪圖 << <a href='0319 繪圖.html'>Previous</a> <a href='市購件廠商(參考廠商).html'>Next</a> >> 市購件廠商(參考廠商)</div>
+<br />4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='治具.html'>Next</a> >> 治具</div>
         
     <!-- footer -->
       <div class="container">
