--- a/content/治具.html
+++ b/content/治具.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage2-bg6</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li><a href='0319 繪圖.html'>0319 繪圖</a><li><a href='成品.html'>成品</a><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,12 +134,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='成品.html'>Next</a> >> 成品<br /><h1>0319 繪圖</h1>
+    <div id="tipue_search_content">成品 << <a href='成品.html'>Previous</a> <a href='市購件廠商(參考廠商).html'>Next</a> >> 市購件廠商(參考廠商)<br /><h1>治具</h1>
 <p><span>車架落槌治具</span></p>
 <p><span><img alt="" height="966" src="./../images/自行車落槌治具.jpg" width="536"/></span></p>
 <p><span>前叉落槌治具</span></p>
 <p><span><img alt="" height="745" src="./../images/前叉落槌治具.jpg" width="1089"/></span></p>
-<br />4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='成品.html'>Next</a> >> 成品</div>
+<br />成品 << <a href='成品.html'>Previous</a> <a href='市購件廠商(參考廠商).html'>Next</a> >> 市購件廠商(參考廠商)</div>
         
     <!-- footer -->
       <div class="container">
