--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,11 +1,5 @@
 <h1>About</h1>
-<p>組員:</p>
-<p>40823214 40823225 40823247 40823248</p>
-<p>分工:</p>
-<p>40823214 繪圖</p>
-<p>40823225 網頁管理</p>
-<p>40823247 <span>40823248 程式模擬</span></p>
-<p>組員網站及倉儲</p>
+<p style="text-align: left;"></p>
 <p><span>40823214倉儲:<a href="https://github.com/40823214/cd2021">https://github.com/40823214/cd2021</a></span></p>
 <p>               <span>網頁:<a href="https://40823214.github.io/cd2021/content/index.html">https://40823214.github.io/cd2021/content/index.html</a></span></p>
 <p><span>40823225倉儲:<a href="https://github.com/40823225/cd2021">https://github.com/40823225/cd2021</a></span></p>
@@ -13,8 +7,7 @@
 <p><span>40823247倉儲:<a href="https://github.com/40823247/cd2021">https://github.com/40823247/cd2021</a></span></p>
 <p>              <span>網頁:<a href="https://40823247.github.io/cd2021/content/index.html">https://40823247.github.io/cd2021/content/index.html</a></span></p>
 <p><span>40823248倉儲:<a href="https://github.com/40823248/cd2021">https://github.com/40823248/cd2021</a></span></p>
-<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p>
-<h1>多功能腳踏車衝擊測試機</h1>
+<p>               <span>網頁:<a href="https://40823248.github.io/cd2021/content/index.html">https://40823248.github.io/cd2021/content/index.html</a></span></p><h1>多功能腳踏車衝擊測試機</h1>
 <h2>1.腳踏車架衝擊測試</h2>
 <p>參考規範</p>
 <p>ISO 4210</p>
