--- a/content/About.html
+++ b/content/About.html
@@ -137,16 +137,19 @@ img.add_border {
     <div id="tipue_search_content"> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機<br /><h1>About</h1>
 <p>組員:</p>
 <p>40823214、40823225、40823247、40823248</p>
+<p>------------------------------------------------------</p>
 <p>分工:</p>
 <p>40823214繪圖</p>
 <p>40823225網頁管理</p>
 <p>40823247、40823248程式模擬</p>
+<p>------------------------------------------------------</p>
 <p>組員網站及倉儲:</p>
 <p>40823214<a href="https://github.com/40823214/cd2021">倉儲</a>|<a href="https://40823214.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823225<a href="https://github.com/40823225/cd2021">倉儲</a>|<a href="https://40823225.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823247<a href="https://github.com/40823247/cd2021">倉儲</a>|<a href="https://40823247.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站</a></p>
-<p style="text-align: left;"></p><br /> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機</div>
+<p style="text-align: left;"></p>
+<br /> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機</div>
         
     <!-- footer -->
       <div class="container">
