--- a/config/content.htm
+++ b/config/content.htm
@@ -12,7 +12,7 @@
 <p>40823225<a href="https://github.com/40823225/cd2021">倉儲</a>|<a href="https://40823225.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823247<a href="https://github.com/40823247/cd2021">倉儲</a>|<a href="https://40823247.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站</a> </p>
-<p>test</p><h1>多功能腳踏車衝擊測試機</h1>
+<p>test40823248</p><h1>多功能腳踏車衝擊測試機</h1>
 <h2>1.腳踏車架衝擊測試</h2>
 <p>參考規範</p>
 <p>ISO 4210</p>
