腳踏車架衝擊測試

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -33,15 +33,28 @@
         <section>
             <h2>協同題目:多功能腳踏車衝擊測試機</h2>
             <p>
-               起源:
+               起源:我的同學中有在騎腳踏車的同學，看到他們在其叫踏車時想到之前有看過有關於腳踏車衝擊測測試機的影片，所以這次決定來嘗試設計一個這樣的測試機構
         </p>
         </section>
 
         <section>
-        <h2>設計理念</h2>
+        <h2>設計規範</h2>
         <p></p>
         </section>
 
+        <section>
+        <h3>腳踏車架衝擊測試</h3>
+        <p>參考規範
+
+        ISO 4210
+        第六章
+        4.1車架-衝擊測試(落槌衝擊)
+
+        在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落
+        </p>
+        <p><img alt="" height="1225" src="/images/車架2.jpg" width="964"></p>
+        <p><img alt="" height="598" src="/images/車架3.jpg" width="816"></p>
+        </section>
         <section>
         <h3>製作規劃</h3>
         <p> 第五:找組員、討論主題</p>
