腳踏車架衝擊測試圖片

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -37,24 +37,23 @@
         </p>
         </section>
 
+        <!-- Example of nested vertical slides -->
         <section>
-        <h2>設計規範</h2>
-        <p></p>
+            <section>
+            <h3>腳踏車架衝擊測試</h3>
+            <p>參考規範
+
+            ISO 4210
+            第六章
+            4.1車架-衝擊測試(落槌衝擊)
+
+            在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落
+            </p>
+            <p><img alt="" height="1225" src="/images/車架2.jpg" width="964"></p>
+            <p><img alt="" height="598" src="/images/車架3.jpg" width="816"></p>
+            </section>
         </section>
 
-        <section>
-        <h3>腳踏車架衝擊測試</h3>
-        <p>參考規範
-
-        ISO 4210
-        第六章
-        4.1車架-衝擊測試(落槌衝擊)
-
-        在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落
-        </p>
-        <p><img alt="" height="1225" src="/images/車架2.jpg" width="964"></p>
-        <p><img alt="" height="598" src="/images/車架3.jpg" width="816"></p>
-        </section>
         <section>
         <h3>製作規劃</h3>
         <p> 第五:找組員、討論主題</p>
