--- a/reveal/index.html
+++ b/reveal/index.html
@@ -40,6 +40,9 @@
         <!-- Example of nested vertical slides -->
         <section>
             <section>
+                <h2>設計規範</h2>
+            </section>
+            <section>
             <h3>腳踏車架衝擊測試</h3>
             <p>參考規範
 
