腳踏車架衝擊測試

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -44,17 +44,19 @@
             </section>
             <section>
             <h3>腳踏車架衝擊測試</h3>
-            <p><font size="5">參考規範
+            <p>參考規範
 
             ISO 4210
             第六章
             4.1車架-衝擊測試(落槌衝擊)
 
             在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落
-            </font></p>
-            <p><image src="車架2.jpg" width="241" hight="306"></p>
-            <p><img alt="" height="598" src="車架3.jpg" width="816"></p>
+            </p>
             </section>
+            <section>
+            <p><image src="車架2.jpg" width="482" hight="612">
+            <img alt="" height="598" src="車架3.jpg" width="816"></p>
+            <section>
         </section>
 
         <section>
