--- a/reveal/index.html
+++ b/reveal/index.html
@@ -43,7 +43,7 @@
                 <h2>設計規範</h2>
             </section>
             <section>
-            <h3>腳踏車架衝擊測試</h3>
+            <h2>腳踏車架衝擊測試</h2>
             <p>參考規範
 
             ISO 4210
@@ -55,9 +55,9 @@
             </section>
             <section>
             <p><image src="車架2.jpg" width="482" hight="612"></p>
+            </section>
             <section>
-            <section>
-            <h4>前叉衝擊測試</h4>
+            <h2>前叉衝擊測試</h2>
             <p>參考規範
 
             ISO 4210
@@ -69,9 +69,9 @@
             </section>
             <section>
             <p><image src="前叉.jpg" width="558" hight="656"></p>
+            </section>
             <section>
-            <section>
-            <h5>踏板衝擊測試</h5>
+            <h2>踏板衝擊測試</h2>
             <p>參考規範
 
             ISO 4210
@@ -83,9 +83,9 @@
             </section>
             <section>
             <p><image src="踏板.jpg" width="365" hight="589"></p>
+            </section>
             <section>
-            <section>
-            <h6>登山車輪組能量吸收測試</h6>
+            <h2>登山車輪組能量吸收測試</h2>
             <p>參考規範
 
             ISO 4210
@@ -98,7 +98,7 @@
             </section>
             <section>
             <p><image src="輪胎.jpg" width="732" hight="570"></p>
-            <section>
+            </section>
         </section>
 
         <section>
