--- a/reveal/index.html
+++ b/reveal/index.html
@@ -101,12 +101,23 @@
             </section>
         </section>
 
+        <!-- Example of nested vertical slides -->
         <section>
-        <h3>製作規劃</h3>
-        <p> 第五:找組員、討論主題</p>
-        <p> 第五、六周:繪製零件圖</p>
-        <p> 第七、八周:修改並測試</p>
-        <p> 第九周:報告</p>
+            <section>
+            <h3>設計手稿</h3>
+            </section>
+            <section>
+            <p><image src="手稿1.jpg" width="732" hight="570"></p>
+            </section>
+            <section>
+            <p><image src="手稿2.jpg" width="732" hight="570"></p>
+            </section>
+            <section>
+            <p><image src="手稿3.jpg" width="732" hight="570"></p>
+            </section>
+            <section>
+            <p><image src="手稿4.jpg" width="732" hight="570"></p>
+            </section>
         </section>
     </div>
 </div>
