--- a/reveal/index.html
+++ b/reveal/index.html
@@ -110,13 +110,35 @@
             <p><image src="手稿1.jpg" width="420" hight="594"></p>
             </section>
             <section>
-            <p><image src="手稿2.jpg" width="732" hight="570"></p>
+            <p><image src="手稿2.jpg" width="420" hight="594""></p>
             </section>
             <section>
-            <p><image src="手稿3.jpg" width="732" hight="570"></p>
+            <p><image src="手稿3.jpg" width="420" hight="594"></p>
             </section>
             <section>
-            <p><image src="手稿4.jpg" width="732" hight="570"></p>
+            <p><image src="手稿4.jpg" width="420" hight="594"></p>
+            </section>
+        </section>
+        <!-- Example of nested vertical slides -->
+        <section>
+            <section>
+            <h4>設計成品</h4>
+            </section>
+            <section>
+            <h4>車架衝擊測試</h4>
+            <p><image src="成品2.jpg" width="420" hight="594"></p>
+            </section>
+            <section>
+            <h4>前叉衝擊測試</h4>
+            <p><image src="成品3.jpg" width="420" hight="594"></p>
+            </section>
+            <section>
+            <h4>輪胎衝擊測試</h4>
+            <p><image src="成品1.jpg" width="420" hight="594"></p>
+            </section>
+            <section>
+            <h4>踏板衝擊測試</h4>
+            <p><image src="成品4.jpg" width="420" hight="594"></p>
             </section>
         </section>
     </div>
