--- a/reveal/index.html
+++ b/reveal/index.html
@@ -140,6 +140,14 @@
             <h4>踏板衝擊測試</h4>
             <p><image src="成品4.jpg" width="330" hight="444"></p>
             </section>
+            <section>
+            <h4>車架落槌治具</h4>
+            <p><image src="自行車落槌治具.jpg" width="330" hight="444"></p>
+            </section>
+            <section>
+            <h4>前叉落槌治具</h4>
+            <p><image src="前叉落槌治具.jpg" width="330" hight="444"></p>
+            </section>
         </section>
         <!-- Example of nested vertical slides -->
         <section>
@@ -168,7 +176,7 @@
         <section>
             <section>
             <h4>整體爆炸圖</h4>
-            <p><image src="本體爆炸圖.png" width="200" hight="200"></p>
+            <p><image src="本體爆炸圖.png" width="400" hight="350"></p>
             </section>
             <section>
             <h4>傳動系統爆炸</h4>
@@ -176,19 +184,58 @@
             </section>
             <section>
             <h4>聯板爆炸圖</h4>
-            <p><image src="聯板爆炸.png" width="350" hight="350"></p>
+            <p><image src="聯板爆炸.png" width="400" hight="400"></p>
             </section>
             <section>
             <h4>衝擊頭爆炸圖</h4>
-            <p><image src="衝擊頭爆炸.png" width="350" hight="350"></p>
+            <p><image src="衝擊頭爆炸.png" width="300" hight="300"></p>
             </section>
             <section>
             <h4>車架衝擊爆炸</h4>
-            <p><image src="車架衝擊爆炸.png" width="350" hight="350"></p>
+            <p><image src="車架衝擊爆炸.png" width="300" hight="300"></p>
             </section>
             <section>
             <h4>前叉衝擊爆炸</h4>
             <p><image src="前叉衝擊爆炸.png" width="350" hight="350"></p>
+            </section>
+            <section>
+            <h4>輪胎衝擊爆炸</h4>
+            <p><image src="輪胎衝擊爆炸.png" width="350" hight="350"></p>
+            </section>
+            <section>
+            <h4>踏板衝擊爆炸</h4>
+            <p><image src="踏板衝擊爆炸.png" width="350" hight="350"></p>
+            </section>
+        </section>
+        <!-- Example of nested vertical slides -->
+        <section>
+            <section>
+            <h3>細部解說</h3>
+            </section>
+            <section>
+            <h4>汽缸夾持機構</h4>
+            <p利用汽缸來聯動衝擊頭</p>
+            <p><image src="汽缸.png" width="350" hight="350"></p>
+            </section>
+            <section>
+            <h4>治具滑動滑軌</h4>
+            <p在治具底部加一滑軌，這樣在放置治具時可以輕鬆推入定位，也可以在不同治具下定位</p>
+            <p><image src="治具底座.png" width="350" hight="350"></p>
+            </section>
+            <section>
+            <h4>速度感測機構</h4>
+            <p>使用遮斷開關計算兩次遮斷的時間來計算衝擊前一刻的速度</p>
+            <p><image src="速度感測.png" width="350" hight="350"></p>
+            </section>
+            <section>
+            <h4>光學尺測量機構</h4>
+            <p>利用光學尺來定位衝擊頭的高度及落下時的變形量</p>
+            <p><image src="光學尺.png" width="350" hight="350"></p>
+            </section>
+            <section>
+            <h4>安全開關</h4>
+            <p>在升降聯板的上下極限位置放置一安全開關避免撞機</p>
+            <p><image src="安全開關.png" width="350" hight="350"></p>
             </section>
         </section>
     </div>
