--- a/reveal/index.html
+++ b/reveal/index.html
@@ -99,12 +99,16 @@
             <section>
             <p><image src="輪胎.jpg" width="732" hight="570"></p>
             </section>
+            <section>
+                <p>設計參考</p>
+                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+            </section>
         </section>
 
         <!-- Example of nested vertical slides -->
         <section>
             <section>
-            <h3>設計手稿</h3>
+            <h4>設計手稿</h4>
             </section>
             <section>
             <p><image src="手稿1.jpg" width="420" hight="594"></p>
@@ -210,17 +214,17 @@
         <!-- Example of nested vertical slides -->
         <section>
             <section>
-            <h3>細部解說</h3>
+            <h4>細部解說</h4>
             </section>
             <section>
             <h4>汽缸夾持機構</h4>
             <p利用汽缸來聯動衝擊頭</p>
-            <p><image src="汽缸.png" width="350" hight="350"></p>
+            <p><image src="汽缸.png" width="500" hight="500"></p>
             </section>
             <section>
             <h4>治具滑動滑軌</h4>
             <p在治具底部加一滑軌，這樣在放置治具時可以輕鬆推入定位，也可以在不同治具下定位</p>
-            <p><image src="治具底座.png" width="350" hight="350"></p>
+            <p><image src="治具底座.png" width="500" hight="500"></p>
             </section>
             <section>
             <h4>速度感測機構</h4>
