--- a/reveal/index.html
+++ b/reveal/index.html
@@ -101,7 +101,7 @@
             </section>
             <section>
                 <p>設計參考</p>
-                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+                <p><iframe width="560" height="314" src="//www.youtube.com/embed/OYllHRXrVLg" allowfullscreen="allowfullscreen"></iframe></p>
             </section>
         </section>
 
@@ -240,6 +240,28 @@
             <h4>安全開關</h4>
             <p>在升降聯板的上下極限位置放置一安全開關避免撞機</p>
             <p><image src="安全開關.png" width="350" hight="350"></p>
+            </section>
+        </section>
+        <!-- Example of nested vertical slides -->
+        <section>
+            <section>
+            <h4>模擬影片</h4>
+            </section>
+            <section>
+                <p>車架衝擊模擬</p>
+                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+            </section>
+            <section>
+                <p>設計參考</p>
+                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+            </section>
+            <section>
+                <p>設計參考</p>
+                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+            </section>
+            <section>
+                <p>設計參考</p>
+                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
             </section>
         </section>
     </div>
