--- a/reveal/index.html
+++ b/reveal/index.html
@@ -249,19 +249,19 @@
             </section>
             <section>
                 <p>車架衝擊模擬</p>
+                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/tQ_pLq1T5gI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></p>
+            </section>
+            <section>
+                <p>前叉衝擊模擬</p>
+                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/vdgVH1WUilY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </section>
+            <section>
+                <p>輪胎衝擊模擬</p>
                 <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
             </section>
             <section>
-                <p>設計參考</p>
-                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
-            </section>
-            <section>
-                <p>設計參考</p>
-                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
-            </section>
-            <section>
-                <p>設計參考</p>
-                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+                <p>踏板衝擊模擬</p>
+                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/E17sX3gHLTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             </section>
         </section>
     </div>
