--- a/reveal/index.html
+++ b/reveal/index.html
@@ -257,7 +257,7 @@
             </section>
             <section>
                 <p>輪胎衝擊模擬</p>
-                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="https://youtu.be/OYllHRXrVLg"></iframe></p>
+                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/n8MbdPcCThs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             </section>
             <section>
                 <p>踏板衝擊模擬</p>
