--- a/content/多功能腳踏車衝擊測試機-2.html
+++ b/content/多功能腳踏車衝擊測試機-2.html
@@ -134,13 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='治具.html'>Next</a> >> 治具<br /><h1>成品</h1>
-<p>車架衝擊</p>
-<p><span></span></p>
-<p><span><img alt="" height="862" src="./../images/車架衝擊.jpg" width="983"/></span></p>
-<p><span>前叉衝擊</span></p>
-<p><span><img alt="" height="1153" src="./../images/前叉衝擊.jpg" width="993"/></span></p>
-<br />4.登山車輪組能量吸收測試 << <a href='4.登山車輪組能量吸收測試.html'>Previous</a> <a href='治具.html'>Next</a> >> 治具</div>
+    <div id="tipue_search_content">多功能腳踏車衝擊測試機-1 << <a href='多功能腳踏車衝擊測試機-1.html'>Previous</a> <a href='1.腳踏車架衝擊測試.html'>Next</a> >> 1.腳踏車架衝擊測試<br /><h1>多功能腳踏車衝擊測試機-2</h1>
+<p></p>
+<br />多功能腳踏車衝擊測試機-1 << <a href='多功能腳踏車衝擊測試機-1.html'>Previous</a> <a href='1.腳踏車架衝擊測試.html'>Next</a> >> 1.腳踏車架衝擊測試</div>
         
     <!-- footer -->
       <div class="container">
