--- a/config/content.htm
+++ b/config/content.htm
@@ -11,14 +11,13 @@
 <p>40823214<a href="https://github.com/40823214/cd2021">倉儲</a>|<a href="https://40823214.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823225<a href="https://github.com/40823225/cd2021">倉儲</a>|<a href="https://40823225.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823247<a href="https://github.com/40823247/cd2021">倉儲</a>|<a href="https://40823247.github.io/cd2021/content/index.html">網站</a></p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-<p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站<br/><br/>H</a>I</p>
-<p style="text-align: left;">HOW ARE YOU<br/>I fine thank you and you.<br/>and you?</p>
+<p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站<br/><br/></a></p>
 <h1>多功能腳踏車衝擊測試機</h1>
-=======
+<p>=======</p>
 <p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站</a> </p>
-<p>test40823248</p><h1>多功能腳踏車衝擊測試機</h1>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; d9aa56222e71c6fba1212a3ae764b5584a9e49c0
+<p>test40823248</p>
+<h1>多功能腳踏車衝擊測試機</h1>
+<p></p>
 <h2>1.腳踏車架衝擊測試</h2>
 <p>參考規範</p>
 <p>ISO 4210</p>
