--- a/content/多功能腳踏車衝擊測試機-1.html
+++ b/content/多功能腳踏車衝擊測試機-1.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='多功能腳踏車衝擊測試機-1.html'>多功能腳踏車衝擊測試機-1</a><li class='has-children'><a href='多功能腳踏車衝擊測試機-2.html'>多功能腳踏車衝擊測試機-2</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='1.腳踏車架衝擊測試.html'>Next</a> >> 1.腳踏車架衝擊測試<br /><h1>多功能腳踏車衝擊測試機</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='1.腳踏車架衝擊測試.html'>Next</a> >> 1.腳踏車架衝擊測試</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='多功能腳踏車衝擊測試機-2.html'>Next</a> >> 多功能腳踏車衝擊測試機-2<br /><h1>多功能腳踏車衝擊測試機-1</h1>
+<p>=======</p>
+<p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站</a> </p>
+<p>test40823248</p>
+<br />About << <a href='About.html'>Previous</a> <a href='多功能腳踏車衝擊測試機-2.html'>Next</a> >> 多功能腳踏車衝擊測試機-2</div>
         
     <!-- footer -->
       <div class="container">
