--- a/content/第八周.html
+++ b/content/第八周.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage2-bg6</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,8 +134,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">市購件廠商(參考廠商) << <a href='市購件廠商(參考廠商).html'>Previous</a> <a href='第六周.html'>Next</a> >> 第六周<br /><h1>影片</h1>
-<br />市購件廠商(參考廠商) << <a href='市購件廠商(參考廠商).html'>Previous</a> <a href='第六周.html'>Next</a> >> 第六周</div>
+    <div id="tipue_search_content">第七周 << <a href='第七周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論<br /><h1>第八周</h1>
+<p>程式模擬</p>
+<p>此為程式模擬影片，使用coppeliasim時模擬出現問題，仍在找詳細原因</p>
+<p>目前改用invertor模擬，以下為模擬影片。</p>
+<p>1.輪胎衝擊測試模擬測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CO3iFXC9EG0" width="560"></iframe></p>
+<p><span>2.腳踏車架衝擊模擬測試</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dRWGmjvaeOQ" width="560"></iframe></span></p>
+<p><span>3.腳踏車前叉衝擊模擬測試</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p>
+<br />第七周 << <a href='第七周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論</div>
         
     <!-- footer -->
       <div class="container">
