--- a/content/1.腳踏車架衝擊測試.html
+++ b/content/1.腳踏車架衝擊測試.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='多功能腳踏車衝擊測試機-1.html'>多功能腳踏車衝擊測試機-1</a><li class='has-children'><a href='多功能腳踏車衝擊測試機-2.html'>多功能腳踏車衝擊測試機-2</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a><li><a href='第八周.html'>第八周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a><li><a href='第八周.html'>第八周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">多功能腳踏車衝擊測試機-2 << <a href='多功能腳踏車衝擊測試機-2.html'>Previous</a> <a href='2.前叉衝擊測試.html'>Next</a> >> 2.前叉衝擊測試<br /><h1>1.腳踏車架衝擊測試</h1>
+    <div id="tipue_search_content">多功能腳踏車衝擊測試機 << <a href='多功能腳踏車衝擊測試機.html'>Previous</a> <a href='2.前叉衝擊測試.html'>Next</a> >> 2.前叉衝擊測試<br /><h1>1.腳踏車架衝擊測試</h1>
 <p>參考規範</p>
 <p>ISO 4210</p>
 <p>第六章</p>
@@ -144,7 +144,7 @@ img.add_border {
 <p>在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，滾輪則位於前叉尾端，將落錘升起治距離"h"，釋放落錘使其錘職下落</p>
 <p><span> <img alt="" height="1225" src="./../images/車架2.jpg" width="964"/></span></p>
 <p><img alt="" height="598" src="./../images/車架3.jpg" width="816"/></p>
-<br />多功能腳踏車衝擊測試機-2 << <a href='多功能腳踏車衝擊測試機-2.html'>Previous</a> <a href='2.前叉衝擊測試.html'>Next</a> >> 2.前叉衝擊測試</div>
+<br />多功能腳踏車衝擊測試機 << <a href='多功能腳踏車衝擊測試機.html'>Previous</a> <a href='2.前叉衝擊測試.html'>Next</a> >> 2.前叉衝擊測試</div>
         
     <!-- footer -->
       <div class="container">
