--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -97,6 +97,16 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oc-Pmd3xb3Q" width="560"></iframe><a href="https://youtu.be/Oc-Pmd3xb3Q">https://youtu.be/Oc-Pmd3xb3Q</a></p>
 <h2>第七周</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ysv6bemaso4" width="560"></iframe><a href="https://youtu.be/ysv6bemaso4">https://youtu.be/ysv6bemaso4</a></p>
+<h2>第八周</h2>
+<p>程式模擬</p>
+<p>此為程式模擬影片，使用coppeliasim時模擬出現問題，仍在找詳細原因</p>
+<p>目前改用invertor模擬，以下為模擬影片。</p>
+<p>1.輪胎衝擊測試模擬測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CO3iFXC9EG0" width="560"></iframe></p>
+<p><span>2.腳踏車架衝擊模擬測試</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dRWGmjvaeOQ" width="560"></iframe></span></p>
+<p><span>3.腳踏車前叉衝擊模擬測試</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p>
 <h1>討論</h1>
 <h2>第一次討論</h2>
 <p>日期3/25</p>
